--- a/1-home.html
+++ b/1-home.html
@@ -38,6 +38,36 @@
         </div>
         <img src="Images/Burger Icon.svg" alt="Icon" class="burger-btn" onclick=showSidebar()>
     </div>
+    <div class="navsidebar">
+        <div class="menu">
+            <span style="margin: 15px 10px; font-family: Tahoma, sans-serif; font-weight: bold;
+            color: rgba(0, 0, 0, 0.8); font-size: 25px;">MENU</span>
+            <img src="Images/Exit Icon.svg" alt="Exit" style="width: 40px; margin-left: 150px; margin-top: 6px;"
+            onclick=hidesidebar()>
+        </div>
+        <hr style="width: 100%; border: 2px solid rgba(0, 0, 0, 0.7); margin-top: 5px;">
+        <span onclick=hidesidebar()><a href="1-home.html" style="font-size: 1.3em; margin: 10px;">HOME</a></span>
+        <hr style="width: 100%; border: 1px solid rgba(0, 0, 0, 0.4); margin-left: 0; margin-top: 4px;">
+        <span onclick=hidesidebar()><a href="6-favorite.html" style="font-size: 1.3em; margin: 10px;">FAVORITE</a></span>
+        <hr style="width: 100%; border: 1px solid rgba(0, 0, 0, 0.4); margin-left: 0;  margin-top: 4px;">
+        <span onclick=hidesidebar()><a href="7-contact.html" style="font-size: 1.3em; margin: 10px;">CONTACT</a></span>
+        <hr style="width: 100%; border: 1px solid rgba(0, 0, 0, 0.4); margin-left: 0; margin-top: 4px;">
+        <span onclick=hidesidebar()><a href="8-aboutus.html" style="font-size: 1.3em; margin: 10px;">ABOUT US</a></span>
+        <hr style="width: 100%; border: 1px solid rgba(0, 0, 0, 0.4); margin-left: 0; margin-top: 4px;">
+        <span onclick=hidesidebar()><a href="2-login.html" style="font-size: 1.3em; margin: 10px;">LOGIN/SIGNUP</a></span>
+        <div class="search1">
+            <a href="4-search1.html" onclick=hidesidebar()>
+                <img src="Images/Search Icon.png" alt="Search"
+                style="width: 30px; height: 30px; padding-left: 7px;">
+                <p>Search</p>
+            </a>
+            <select name="Options" id="whatever">
+                <option value="Destination" selected>By Destination name</option>
+                <option value="Country">By Country name</option>
+            </select>
+        </div>
+        <div class="search2"><a href="" style="text-decoration: underline; text-decoration-color: white;">CATEGORY</a></div>
+    </div>
 
     <div class="main">
         <section class="hero">
@@ -132,7 +162,32 @@
             </div>
         </section>
     </div>
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-col">
+                <h3>DOMNER</h3>
+                <p>Your ultimate travel companion.</p>
+            </div>
+            
+            <div class="footer-col">
+                <h3>Quick Links</h3>
+                <a href="1-home.html">Home</a>
+                <a href="8-aboutus.html">About Us</a>
+                <a href="7-contact.html">Contact</a>
+                <a href="2-login.html">Login</a> 
+            </div>
 
+            <div class="footer-col">
+                <h3>Contact Us</h3>
+                <p>Email: domner@trip.com</p>
+                <p>Phone: +855 12 345 678</p>
+                <p>Phnom Penh, Cambodia</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 DOMNER. All Rights Reserved.</p>
+        </div>
+    </footer>
 
     <script>
         function showSidebar() {
